--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,70 +7,51 @@
   <body>
     <button class="clear__btn">clear</button>
     <br />
-    <canvas id="draw" width="800" height="800"></canvas>
+    <canvas id="draw"></canvas>
     <script>
       const draw = document.querySelector("#draw");
       const ctx = draw.getContext("2d");
       const clearBtn = document.querySelector(".clear__btn");
       let isDrawing = false;
-      let x = 0;
-      let y = 0;
+      let lastX = 0;
+      let lastY = 0;
+      let direction = true;
+      let hue = 0;
+      draw.width = window.innerWidth;
+      draw.height = window.innerHeight;
+      ctx.lineCap = "round";
+      ctx.lineJoin = "round";
 
-      let customLineWidth = 80;
-      let isLine = false;
-
-      function drawLine(ctx, x1, y1, x2, y2) {
+      function drawLine(event) {
         ctx.beginPath();
-        var gradient = ctx.createLinearGradient(0, 0, 800, 800);
-        gradient.addColorStop(1 / 6, "orange");
-        gradient.addColorStop(2 / 6, "yellow");
-        gradient.addColorStop(3 / 6, "green");
-        gradient.addColorStop(4 / 6, "blue");
-        gradient.addColorStop(5 / 6, "indigo");
-        gradient.addColorStop(6 / 6, "violet");
+        if (hue >= 360) hue = 0;
 
-        if (customLineWidth >= 80) {
-          isLine = true;
-        } else if (customLineWidth <= 1) {
-          isLine = false;
+        if (ctx.lineWidth >= 200 || ctx.lineWidth <= 1) {
+          direction = !direction;
         }
 
-        if (isLine) {
-          customLineWidth -= 0.5;
-          ctx.lineWidth = customLineWidth;
-        } else {
-          customLineWidth += 0.5;
-          ctx.lineWidth = customLineWidth;
-        }
-
-        ctx.strokeStyle = gradient;
-        ctx.lineCap = "round";
-        ctx.moveTo(x1, y1);
-        ctx.lineTo(x2, y2);
+        direction ? ctx.lineWidth++ : ctx.lineWidth--;
+        console.log(ctx.lineWidth);
+        ctx.strokeStyle = `hsl(${hue},100%,50%)`;
+        ctx.moveTo(lastX, lastY);
+        ctx.lineTo(event.offsetX, event.offsetY);
         ctx.stroke();
-        ctx.closePath();
+        hue++;
+        [lastX, lastY] = [event.offsetX, event.offsetY];
       }
 
       draw.addEventListener("mousedown", (event) => {
-        x = event.offsetX;
-        y = event.offsetY;
         isDrawing = true;
+        [lastX, lastY] = [event.offsetX, event.offsetY];
       });
 
       draw.addEventListener("mousemove", (event) => {
-        if (isDrawing) {
-          drawLine(ctx, x, y, event.offsetX, event.offsetY);
-          x = event.offsetX;
-          y = event.offsetY;
-        }
+        if (!isDrawing) return;
+        drawLine(event);
       });
 
       draw.addEventListener("mouseup", (event) => {
-        if (isDrawing) {
-          x.offsetX = 0;
-          y.offsetY = 0;
-          isDrawing = false;
-        }
+        isDrawing = false;
       });
 
       clearBtn.addEventListener("click", () => {
